[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/Pic/bg_common.png" type="Texture" id=1]
[ext_resource path="res://Asset/EffectPic/Level choose.png" type="Texture" id=2]
[ext_resource path="res://Asset/Pic/icon_back.png" type="Texture" id=3]
[ext_resource path="res://Game/CommonUI/Button/CommonButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/Pic/icon_replay.png" type="Texture" id=5]
[ext_resource path="res://Asset/Pic/icon_setting.png" type="Texture" id=6]
[ext_resource path="res://Game/LevelChooseScene/LevelChooseScene.gd" type="Script" id=7]
[ext_resource path="res://Asset/Font/fnt_zhankukuaile2016.ttf" type="DynamicFontData" id=8]

[sub_resource type="Animation" id=1]
resource_name = "in"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 220
font_data = ExtResource( 8 )

[node name="LevelChooseScene" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/in = SubResource( 1 )
anims/out = SubResource( 2 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_right = -6.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEffect" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 1236.0
margin_bottom = 2208.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="Buttons" instance=ExtResource( 4 )]
anchor_left = 0.049
anchor_top = 0.032
anchor_right = 0.146
anchor_bottom = 0.113
margin_left = 0.141998
margin_top = -0.656006
margin_right = 0.141998
margin_bottom = 0.496002
texture_normal = ExtResource( 3 )

[node name="Replay" parent="Buttons" instance=ExtResource( 4 )]
visible = false
anchor_left = 0.403
anchor_top = 0.027
anchor_right = 0.564
anchor_bottom = 0.118
margin_left = 0.473969
margin_top = 0.383999
margin_right = 0.511963
margin_bottom = 0.384003
texture_normal = ExtResource( 5 )

[node name="Setting" parent="Buttons" instance=ExtResource( 4 )]
anchor_left = 0.767
anchor_top = 0.014
anchor_right = 0.973
anchor_bottom = 0.13
margin_left = -0.614014
margin_top = 0.0879993
margin_right = -0.466187
margin_bottom = 0.0880127
texture_normal = ExtResource( 6 )

[node name="LevelNum" type="Label" parent="Buttons"]
margin_left = 5.52441
margin_top = -192.762
margin_right = 1210.52
margin_bottom = 482.24
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 18.49
margin_top = 413.02
margin_right = 1209.49
margin_bottom = 1985.02
custom_constants/vseparation = 20
custom_constants/hseparation = 55
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="button_down" from="Buttons/Back" to="." method="_on_Back_button_down"]
[connection signal="button_down" from="Buttons/Replay" to="." method="_on_Replay_button_down"]
[connection signal="button_down" from="Buttons/Setting" to="." method="_on_Setting_button_down"]
